# paperclip-beads-gastown-bridge

./: .gitignore  LICENSE  README.md  bridge_spec_v1.md  config.sample.json  config.schema.json  pyproject.toml
.beads/: .beads-credential-key  config.yaml  metadata.json
.github/workflows/: ci.yml
bridge/: __init__.py  cli.py  config.py  daemon.py  db.py  mapping.py  mock_adapters.py  models.py  observability.py  plugin_scaffold.py  preflight.py  runtime.py  service.py  ux.py
bridge/adapters/: __init__.py  base.py  beads.py  gastown.py  paperclip.py
bridge/migrations/: 001_init.sql  002_id_map.sql  003_id_map_scoped.sql  004_execution_control.sql
docs/: plugin-integration.md  quickstart.md
tests/: conftest.py  test_beads_adapter_cli.py  test_config_runtime.py  test_contract_parsing.py  test_daemon_ops.py  test_e2e_simulation.py  test_execution_control.py  test_gastown_adapter_cli.py  test_id_map_and_dlq.py  test_idempotency.py  test_lease_single_worker.py  test_onboarding_state.py  test_outbox_retry_dlq.py  test_paperclip_adapter_methods.py  test_paperclip_adapter_resilience.py  test_phase2_mapping.py  test_plugin_scaffold.py  test_preflight.py  test_reconciliation.py  test_single_writer_policy.py  test_status_mapping.py  test_ux.py
tests/fixtures/beads/: item.json
tests/fixtures/gastown/: hook.json
tests/fixtures/paperclip/: item.json
