[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperclip-beads-gastown-bridge"
version = "0.1.0"
description = "No-fork bridge service between Paperclip, Beads, and Gastown"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
bridge = "bridge.cli:app"

[tool.setuptools]
packages = ["bridge", "bridge.adapters"]
